--- a/datasource/datasource-subsystem/pom.xml
+++ b/datasource/datasource-subsystem/pom.xml
@@ -91,6 +91,11 @@
     </dependency>
     <dependency>
       <groupId>org.wildfly.swarm</groupId>
+      <artifactId>wildfly-swarm-logging</artifactId>
+      <version>${version.wildfly-swarm}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.wildfly.swarm</groupId>
       <artifactId>wildfly-swarm-datasources</artifactId>
       <version>${version.wildfly-swarm}</version>
     </dependency>
