--- a/datasource/datasource-subsystem/pom.xml
+++ b/datasource/datasource-subsystem/pom.xml
@@ -76,6 +76,13 @@
           </plugin>
         </plugins>
       </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.wildfly.swarm</groupId>
+           <artifactId>wildfly-swarm-management</artifactId>
+          <version>${version.wildfly-swarm}</version>
+        </dependency>
+      </dependencies>
     </profile>
   </profiles>
 
